assets/css/screen.css
/*

This is a development CSS file which is compiled to a minified
production stylesheet in assets/built/screen.css using: gulp dev

*/

/* Lib - Local component imports
/* ---------------------------------------------------------- */

/* Base components */
@import "vars.css";
@import "components/global.css";
@import "components/forms.css";
@import "components/buttons.css";

/* Ghost components */
@import "ghost/header.css";
@import "ghost/content.css";
@import "ghost/readmore.css";
@import "ghost/members.css";
@import "ghost/errors.css";
@import "ghost/footer.css";


/* Main - Your styles here! Edit below
/* ---------------------------------------------------------- */

html,
.gh-viewport {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background: #fff;
}

.gh-main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
}

.gh-page {
    padding: 0 4vw;
}

.gh-article {
    padding: 8vmin 0;
}

.gh-postfeed {
    padding: 8vmin 0;
}

.gh-container {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

.gh-head-actions a {
    display: inline-flex;
    align-items: center;
    margin: 0;
    padding: 10px;
}

.gh-head-actions a svg {
    height: 1.8rem;
    fill: currentcolor;
}

.gh-head-actions a:first-child svg {
    margin-left: 20px;
}

.gh-head-actions a:last-child svg {
    height: 2rem;
}

/* Index
/* ---------------------------------------------------------- */

.gh-card:not(:first-child) {
    margin: 8vmin auto 0;
}

.gh-card-link {
    display: flex;
    flex-direction: column;
}

.gh-card-image {
    width: 100%;
    max-height: 700px;
    object-fit: cover;
    margin-bottom: 4vmin;
}

.gh-card-meta {
    display: block;
    margin: 0 0 1rem;
    font-size: 1.4rem;
    line-height: 1.2em;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    opacity: 0.8;
}

.gh-card-content {
    max-width: 720px;
    margin: 0 auto;
    text-align: left;
    font-size: 1.4rem;
}

.gh-card-content p {
    margin: 1.2rem 0;
    /* padding: 0 6vmin; */
}

.gh-card-content > strong {
    display: inline-block;
    padding: 1px 0;
    font-weight: 500;
    box-shadow: 0 -1px 0 0 inset currentColor;
    opacity: 0.5;
}


/* Page
/* ---------------------------------------------------------- */

.gh-page-head {
    margin: 0 auto;
    padding: 8vmin 0 4vmin;
    text-align: center;
}

.gh-page-image {
    margin: 4vmin 0 0 0;
}

.gh-page-head > p {
    max-width: 720px;
    margin: 0.3em auto 0;
    padding: 0 6vmin;
    font-size: 1.4em;
    line-height: 1.4em;
    opacity: 0.5;
}

@media (max-width: 700px) {
    .gh-page-head > p {
        font-size: 1.4rem;
    }
}


/* Post
/* ---------------------------------------------------------- */

.gh-header {
    padding: 0 0 8vmin 0;
    text-align: left;
}

.gh-post-meta {
    display: block;
    margin: 0 0 1rem;
    font-size: 1.4rem;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    opacity: 0.8;
}

.gh-excerpt {
    font-size: 2rem !important;
    line-height: 2.8rem !important;
    color: rgba(0,0,0,0.5);
    letter-spacing: -1px;
    font-weight: 100;
    margin: 1rem 0 0 0;
}

.gh-feature-image {
    grid-column: wide-start / wide-end;
    width: 100%;
    margin: 8vmin 0 0;
}

.gh-post-authors {
    margin: 2rem 0;
}

.gh-post-footer {
    margin: 2rem 0;
}

/* Author Archive
/* ---------------------------------------------------------- */

.gh-author-image {
    height: 12vmin;
    width: 12vmin;
    margin: 0 auto 1.5em;
    border-radius: 100%;
    overflow: hidden;
    object-fit: cover;
}

.gh-author-meta {
    margin: 2vmin 0 0 0;
    font-size: 1.2em;
}

.gh-author-links {
    display: flex;
    align-items: center;
    justify-content: center;
}

.gh-author-links a {
    position: relative;
    display: inline-flex;
    align-items: center;
    margin: 0 0.75vmin;
}

.gh-author-links a + a:before {
    display: block;
    content: "";
    margin: 0 1.25vmin 0 0;
    height: 1em;
    width: 1px;
    background: rgba(0,0,0,0.3);
    transform: rotate(20deg);
}

@media (max-width: 700px) {
    .gh-author-meta {
        font-size: 1.4rem;
    }
}

